--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "dependencies": {
+    "@decisionrules/decisionrules": "^1.0.1"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
