--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@decisionrules/decisionrules": "^1.0.1"
+    "@decisionrules/decisionrules": "^1.0.1",
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "@types/bun": "latest"
